test/errors/fill1.rcasm
    add
    !fill "foo", 0